Fix z-index on mobile

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -53,7 +53,7 @@ html {
   @apply m-0 p-0 list-none bg-oxford-50 pt-14 pb-4 px-5 rounded-lg relative overflow-hidden;
 
   &::before {
-    @apply absolute top-0 left-0 z-50 w-auto h-auto py-2 px-4 bg-oxford-900 text-white rounded-br-md font-semibold text-lg;
+    @apply absolute top-0 left-0 z-10 w-auto h-auto py-2 px-4 bg-oxford-900 text-white rounded-br-md font-semibold text-lg;
     content: "Menu";
   }
 
